[package]
name = "simple-server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
#dropshot = "0.9.0"
dropshot = { git = "https://github.com/oxidecomputer/dropshot", branch = "main", features = [ "usdt-probes" ] }
http = "0.2"
hyper = "0.14"
tokio = { version = "1.34.0", features = ["full"] }
